customization options added

--- a/src/components/Theme/theme-1/theme.css
+++ b/src/components/Theme/theme-1/theme.css
@@ -1,6 +1,6 @@
 body {
   /* #007cba #666666 lightslategray darkslateblue deepskyblue*/
-  background-color: darkslateblue;
+  background-color: #007cba;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .theme-container {
