--- a/src/components/theme.css
+++ b/src/components/theme.css
@@ -1,6 +1,6 @@
 body {
   /* #007cba #666666 lightslategray darkslateblue deepskyblue*/
-  background-color: #007cba;
+  background-color: whitesmoke;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .theme-container {
@@ -10,6 +10,7 @@ body {
 
 .content {
   padding-top: 1px;
+  margin-left: 15%;
 }
 
 .social-link {
